2002-05-21  Chris Blumenberg  <cblu@apple.com>

	Move the tracking rect after the view has moved.

	* Plugins.subproj/IFPluginView.mm:
	(-[IFPluginView viewHasMoved:]):

	Fixed logging.

	* Plugins.subproj/npapi.m:
	(NPN_UserAgent):
	(NPN_MemAlloc):
	(NPN_MemFree):
	(NPN_MemFlush):
	(NPN_ReloadPlugins):

2002-05-21  Kenneth Kocienda  <kocienda@apple.com>

        Merged these four include files into the precompiled header.
        These are used for the enhanced assertion/debuggin support I
        added yesterday.

        <signal.h>
        <sys/types.h>
        <sys/time.h>
        <sys/resource.h>

	* WebKitPrefix.h

2002-05-20  Chris Blumenberg  <cblu@apple.com>

	Added support for plug-ins to send URL requests to certain targets.

	Added frameNamed to IFWebFrame.

	* Plugins.subproj/IFPluginView.mm:
	(-[IFPluginView getURLNotify:target:notifyData:]):
	(-[IFPluginView postURLNotify:target:len:buf:file:notifyData:]):
	* WebView.subproj/IFWebFrame.h:
	* WebView.subproj/IFWebFrame.mm:
	(-[IFWebFrame frameNamed:]):

2002-05-20  Kenneth Kocienda  <kocienda@apple.com>

	* Misc.subproj/WebKitDebug.h: Now includes <sys/time.h> to prevent possible
          build breakage in the inclusion of <sys/resource.h>

2002-05-20  Kenneth Kocienda  <kocienda@apple.com>

        Changed assertion failure code to send a SIGQUIT instead
        of raising an NSException.

	* Misc.subproj/WebKitDebug.h

2002-05-20  Chris Blumenberg  <cblu@apple.com>

	A whole lot of plug-in clean-up.

	Moved the following functions from npapi to IFPlugin.

	* Plugins.subproj/IFPlugin.m:
	(functionPointerForTVector):
	(tVectorForFunctionPointer):


	Only supply mouse coords when active.

	* Plugins.subproj/IFPluginNullEventSender.h:
	* Plugins.subproj/IFPluginNullEventSender.m:
	(-[IFPluginNullEventSender initializeWithNPP:functionPointer:window:]):
	(-[IFPluginNullEventSender dealloc]):
	(-[IFPluginNullEventSender sendNullEvents]):

	
	Minor clean-ups

	* Plugins.subproj/IFPluginStream.mm: